# imagegram

./: .gitignore  README.md  check_progress.sh  generate_images.py  overnight_run.py  requirements.txt  tokenize_dataset.py  tokenize_fast.py  tokenize_imagenet_large.py  tokenize_parallel.py
dct_tokenizer/: CMakeLists.txt
dct_tokenizer/include/: dct.hpp  image_loader.hpp  tokenizer.hpp
dct_tokenizer/scripts/: color_tokenizer.py  detokenize.py  fast_pipeline.py  fast_pipeline_v2.py  fast_tokenize.py  generate_images.py  parallel_pipeline.py  patch_tokenizer.py  pyramid_generate.py  pyramid_tokenizer.py  simple_vq.py  stream_fast.py  stream_tokenize.py  ultra_fast_pipeline.py  vq_fast_pipeline.py  vq_food101.py  wavelet_imagenet.py  wavelet_tokenizer.py  wavelet_tokenizer_v2.py  wavelet_ultra_fast.py  webdataset_pipeline.py
dct_tokenizer/scripts/cc12m/: README.md  build_cc12m_shard_indices.py  cc12m_generate.py  cc12m_generate_3lvl.py  cc12m_generate_4lvl.py  cc12m_generate_5lvl.py  cc12m_generate_6lvl.py  cc12m_tokenize_pyramid_residual.py  cc12m_tokenize_pyramid_residual_3lvl.py  cc12m_tokenize_pyramid_residual_4lvl.py  cc12m_tokenize_pyramid_residual_5lvl.py  cc12m_tokenize_pyramid_residual_6lvl.py  check_memorization_4lvl.py  multishard_engine.py
dct_tokenizer/scripts/cc12m/examples/: generate_grid_5lvl.sh  generate_grid_5lvl_fast.sh  run_cc12m_3lvl_pipeline.sh  run_cc12m_4lvl_pipeline.sh  run_cc12m_5lvl_pipeline.sh
dct_tokenizer/src/: batch.cpp  compact_tokenizer.cpp  dct.cpp  image_loader.cpp  main.cpp  tokenizer.cpp
dct_tokenizer/tools/: fast_build_index.cpp
